--- a/index.html
+++ b/index.html
@@ -78,17 +78,16 @@
                     
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Arduino Workshop</h3>
+                            <h3 class="mb-0">Freelance Web Developer</h3>
                             <div class="subheading mb-3"></div>
-                            <p>One day Workshop by EDUNEXT</p>
+                            <p>Cybernix YLLP <span class="text-primary"> · Feb 2024</span></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 10 2022</span></div>
                     </div> 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web designing</h3>
+                            <h3 class="mb-0">Freelance Web Developer</h3>
                             <div class="subheading mb-3"></div>
-                            <p>Personal Website <span class="text-primary"> · October 2022</span></p>
                             <p>Technical HS School, Puthuppally Website <span class="text-primary"> · Feb 2023</span></p>
                         </div>
                     </div>                      
@@ -134,10 +133,11 @@
                     <ul class="list-inline">
                         <li>Languages :</li>
                         <ul>
-                            <li>HTML 5</li>
-                            <li>CSS</i></li>
+                            <li>React</li>
                             <li>JavaScript</li>
                             <li>Express</li>
+                            <li>HTML 5</li>
+                            <li>CSS</i></li>
                             <li>Handle Bars</li>
                             <li>MongoDB</li>
                             <li>C++</i></li>
@@ -159,11 +159,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Responsive Web Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Arduino Robotics
+                            Web Developement
                         </li>
                     </ul>
                 </div>
@@ -191,9 +187,30 @@
                     <h2 class="mb-5">Projects</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <div class="subheading mb-3">Cybernix</div>
+                            <p>React · Tailwind · Nodejs</p>
+                            <p class="mb-0"><span><i class="fa-solid fa-paperclip"></i></span><a href="https://cybernix.in" style="text-decoration: none;" target="_blank">cybernix.in</a></p>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <div class="subheading mb-3">IEDC.CEK</div>
+                            <p>HTML5 · CSS · JavaScript · Bootstrap</p>
+                            <p class="mb-0"><span><i class="fa-solid fa-paperclip"></i></span><a href="https://iedc-cek.vercel.app" style="text-decoration: none;" target="_blank">iedc.cek</a></p>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <div class="subheading mb-3">Technical HSS Puthuppally Website</div>
                             <p>HTML5 · CSS · JavaScript · Bootstrap</p>
-                            <p class="mb-0"><span><i class="fa-solid fa-paperclip"></i></span><a href="http:thssputhuppally.ihrd.ac.in" style="text-decoration: none;" target="_blank">thssputhuppally.ihrd.ac.in</a></p>
+                            <p class="mb-0"><span><i class="fa-solid fa-paperclip"></i></span><a href="https://thssputhuppally.ihrd.ac.in" style="text-decoration: none;" target="_blank">thssputhuppally.ihrd.ac.in</a></p>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <div class="subheading mb-3">ASSISTREND</div>
+                            <p>HTML5 · CSS · JavaScript · Bootstrap</p>
+                            <p class="mb-0"><span><i class="fa-solid fa-paperclip"></i></span><a href="https://assistrend.com" style="text-decoration: none;" target="_blank">assistrend.com</a></p>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
