--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <span class="text-primary">K Mathews</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Kottayam,Kerala,India · <a href="mailto:godlykmathews@outlook.com">godlykmathews@outlook.com</a>
+                        Kottayam,Kerala,India  ·  <a href="mailto:godlykmathews@outlook.com">godlykmathews@outlook.com</a>  ·  <a href="mailto:work.godlykm@gmail.com">work.godlykm@gmail.com</a>
                     </div>
 
                     <p style="color: rgba(61, 76, 26, 0.804);"><q>First, solve the problem. Then, write the code.</q> - John Johnson</p>
@@ -80,16 +80,17 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Freelance Web Developer</h3>
                             <div class="subheading mb-3"></div>
-                            <p>Cybernix YLLP <span class="text-primary"> · Feb 2024</span></p>
+                            <p>Cybernix YLLP <span class="text-primary"></span></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">April 10 2022</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Nov 2024 - present</span></div>
                     </div> 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Freelance Web Developer</h3>
                             <div class="subheading mb-3"></div>
-                            <p>Technical HS School, Puthuppally Website <span class="text-primary"> · Feb 2023</span></p>
+                            <p>Technical HS School, Puthuppally Website <span class="text-primary"></span></p>
                         </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jan 2023 - Jun 2023</span></div>
                     </div>                      
                 </div>
             </section>
