--- a/index.html
+++ b/index.html
@@ -78,20 +78,12 @@
                     
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Freelance Web Developer</h3>
+                            <h3 class="mb-0">Web Developer Intern</h3>
                             <div class="subheading mb-3"></div>
-                            <p>Cybernix YLLP <span class="text-primary"></span></p>
+                            <p>Thinkvyne <span class="text-primary">Digital</span></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Nov 2024 - present</span></div>
-                    </div> 
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Freelance Web Developer</h3>
-                            <div class="subheading mb-3"></div>
-                            <p>Technical HS School, Puthuppally Website <span class="text-primary"></span></p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Jan 2023 - Jun 2023</span></div>
-                    </div>                      
+                        <div class="flex-shrink-0"><span class="text-primary">June 2025 - present</span></div>
+                    </div>                     
                 </div>
             </section>
             <hr class="m-0" />
